Prevented touch gestures from altering viewport on mobile

--- a/Priority_2_Thermodynamics/Flammable_Steel/steel.css
+++ b/Priority_2_Thermodynamics/Flammable_Steel/steel.css
@@ -27,6 +27,14 @@ body {
   user-select: none;
 }
 
+/* Prevent dragging the screen around on mobile */
+.lock-screen {
+  height: 100%;
+  overflow: hidden;
+  width: 100%;
+  position: fixed;
+}
+
 /* Buttons */
 
 .btn {
